[gd_scene load_steps=3 format=3 uid="uid://b5sbwmtgwau1w"]

[ext_resource type="Script" path="res://Menu/Player Menu/save_menu2.gd" id="1_eygbo"]
[ext_resource type="Texture2D" uid="uid://ci75magepw08p" path="res://Assets/Complete_GUI_Essential_Pack_Free_Version/01_Basic_Collection/01_Flat_Theme/Sprites/UI_Flat_Textfield_02.png" id="1_tc0qb"]

[node name="SaveMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eygbo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Inventory_Items_Container" type="NinePatchRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_tc0qb")
patch_margin_left = 3
patch_margin_top = 1
patch_margin_right = 3
patch_margin_bottom = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Inventory_Items_Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Inventory_Items_Container/MarginContainer"]
layout_mode = 2

[node name="auto_slot" type="Button" parent="VBoxContainer/Inventory_Items_Container/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 14
text = "Empty Save"

[node name="Label" type="Label" parent="VBoxContainer/Inventory_Items_Container/MarginContainer/VBoxContainer/auto_slot"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="slot_1" type="Button" parent="VBoxContainer/Inventory_Items_Container/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Slot 1"

[node name="slot_1Label" type="Label" parent="VBoxContainer/Inventory_Items_Container/MarginContainer/VBoxContainer/slot_1"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="slot_2" type="Button" parent="VBoxContainer/Inventory_Items_Container/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "save slot 1"

[node name="slot_3" type="Button" parent="VBoxContainer/Inventory_Items_Container/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "save slot 2"

[connection signal="pressed" from="VBoxContainer/Inventory_Items_Container/MarginContainer/VBoxContainer/auto_slot" to="." method="_on_auto_slot_pressed"]
[connection signal="pressed" from="VBoxContainer/Inventory_Items_Container/MarginContainer/VBoxContainer/slot_1" to="." method="_on_slot_1_pressed"]
